@@ -1,0 +1,32 @@
+<tal:manager replace="structure provider:collage.ContentManager" />
+
+<h2 metal:define-macro="title"
+    tal:define="view context/@@collage_kss_helper"
+    tal:attributes="id string:${view/getUniqueIdentifier}-title;
+		    class python: view.getKssClasses('title')"
+    tal:condition="here/Title">
+  <span metal:define-slot="inside"
+        tal:replace="here/Title">title</span>
+</h2>
+
+<p metal:define-macro="description"
+   tal:define="view context/@@collage_kss_helper"
+   tal:attributes="id string:${view/getUniqueIdentifier}-description;
+		   class python: view.getKssClasses('description')"
+   tal:condition="here/Description">
+  <span metal:define-slot="inside"
+        tal:replace="here/Description">description</span>
+</p>
+
+<tal:renderer define="renderer nocall: here/@@renderer">
+  <tal:batches tal:define="batches python:view.getColumnBatches(bsize=0)"
+               tal:repeat="columns batches">
+    <div tal:attributes="class python: 'unbatched-with-%s' % len(columns)">
+
+      <tal:columns replace="structure python: renderer(columns)" />
+
+      <div class="visualClear"><!-- nothing here --></div>
+
+    </div>
+  </tal:batches>
+</tal:renderer>
